<resources>
    <string name="app_name">LearnEnglish_2.0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_text">LearnWords</string>
    <string name="bt_learn">Учить</string>
    <string name="bt_translate">Расставь</string>
    <string name="bt_cards_ru_en">Карточки RU-EN</string>
    <string name="bt_cards">Карточки EN-RU</string>
    <string name="bt_choose">Выбрать</string>
    <string name="bt_collect">Собрать</string>
    <string name="bt_plit">Плитки</string>
    <string name="bt_test">Тест</string>
    <string name="learn_next">Следующее</string>
    <string name="bt_next">далее</string>
    <string name="bt_cards_not_memo">не запомнил</string>
    <string name="bt_cards_memo">запомнил!</string>
    <string name="bt_cards_show">Показать</string>
    <string name="finish_exersize">Поздравляю, вы закончили упражнение!</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_bt_sign_up">Зарегестрироваться</string>
    <string name="login_bt_sign_in">Войти</string>
    <string name="sign_out_bt">Выйти из аккаунта</string>
    <string name="bt_forgot_password">Забыли пароль?</string>
    <string name="bt_new_passw">Восстановить пароль</string>
    <string name="bt_login_back">Назад</string>
    <string name="test_answer">Answer</string>
    <string name="test_check_bt">Проверить</string>
    <string name="story_next_bt">далее</string>
    <string name="inst_one">Да уж, не так я представлял себе Америку, с моей зарплатой я могу жить только в фургоне!</string>
    <string name="inst_sec">На работе сказали подучить язык... Тогда смогут немного повысить в должности...</string>
    <string name="inst_third">Не зря я взял с собой старый словарь. Надеюсь, это не займет много времени!</string>
    <string name="inst_four">Помогай Борису изучать слова, и с каждой главой вы вместе будете покорять новые вершины!</string>
</resources>