<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LearnActivity"
    android:background="@color/bg_main">

    <ImageButton
        android:id="@+id/imageButtonToLesson"
        android:layout_width="48dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/bg_main"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/top_word_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/chewy"
        android:textSize="30dp"
        android:textColor="@color/blue" />

    <ImageView
        android:id="@+id/en_ru_cards_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_word_card"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/bottom_word_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:fontFamily="@font/chewy"
        android:text="TextView"
        android:textColor="@color/blue"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_cards_memo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="576dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="1"
        android:text="@string/bt_cards_memo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/light_green"/>

    <Button
        android:id="@+id/bt_cards_not_memo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="576dp"
        android:layout_weight="1"
        android:text="@string/bt_cards_not_memo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/light_red"/>

    <Button
        android:id="@+id/bt_cards_show"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="576dp"
        android:text="@string/bt_cards_show"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/purple_700_light"/>

    <ProgressBar
        android:id="@+id/progress_bar_cards"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/purple_700"/>


</androidx.constraintlayout.widget.ConstraintLayout>